[gd_scene load_steps=17 format=2]

[ext_resource path="res://ShipBody.gd" type="Script" id=1]
[ext_resource path="res://playerShip1_red.png" type="Texture" id=2]
[ext_resource path="res://Simple explosion/simpleExplosion07.png" type="Texture" id=3]
[ext_resource path="res://Simple explosion/simpleExplosion06.png" type="Texture" id=4]
[ext_resource path="res://Simple explosion/simpleExplosion05.png" type="Texture" id=5]
[ext_resource path="res://Simple explosion/simpleExplosion01.png" type="Texture" id=6]
[ext_resource path="res://Simple explosion/simpleExplosion04.png" type="Texture" id=7]
[ext_resource path="res://Simple explosion/simpleExplosion08.png" type="Texture" id=8]
[ext_resource path="res://Simple explosion/simpleExplosion02.png" type="Texture" id=9]
[ext_resource path="res://Simple explosion/simpleExplosion03.png" type="Texture" id=10]
[ext_resource path="res://Simple explosion/simpleExplosion00.png" type="Texture" id=11]
[ext_resource path="res://Rocket Fire/fire06.png" type="Texture" id=12]
[ext_resource path="res://Rocket Fire/fire07.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.6698, 50.9887 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "rocket",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": false,
"name": "boom",
"speed": 5.0
} ]

[node name="PlayerBody" type="RigidBody2D"]
position = Vector2( 26, 35 )
z_index = 5
collision_layer = 5
collision_mask = 5
mass = 2.04082
gravity_scale = 2.0
contacts_reported = 4
contact_monitor = true
script = ExtResource( 1 )

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 98.7591, 36.5651 )
shape = SubResource( 1 )

[node name="PlayerOverlaySprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 99, 36 )
rotation = 1.5708
z_index = 6
texture = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 99, 36 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="PlayerRocket" type="AnimatedSprite" parent="PlayerSprite"]
visible = false
position = Vector2( -0.790695, 47.8104 )
rotation = 3.14159
frames = SubResource( 2 )
animation = "rocket"
frame = 1
playing = true

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 101.424, 38.1302 )
frames = SubResource( 3 )
animation = "boom"
speed_scale = 3.0

[node name="BlinkingTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="DisabledTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
[connection signal="timeout" from="BlinkingTimer" to="." method="_on_BlinkingTimer_timeout"]
[connection signal="timeout" from="DisabledTimer" to="." method="_on_DisabledTimer_timeout"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimer_timeout"]
